--- a/_quarto/man/run.qmd
+++ b/_quarto/man/run.qmd
@@ -1,15 +1,17 @@
-## Start hotwater engine {.unnumbered}
+## Start a hotwater engine {.unnumbered}
 
 
 ### Description
 
-Start a hotwater engine, which launches a plumber API that is restarted whenever
-the plumber API's folder is modified.
+Start the hotwater engine, launching a plumber API
+that is restarted whenever a file in the plumber API's folder is modified.
 
-Extra directories can be specified to refresh the API when directories other than the plumber folder are modified.
+Extra directories can be specified to refresh the API when
+directories other than the plumber folder are modified.
 
-If a plumber endpoint returns an html response, when hotwater refreshes the API, hotwater will also order
-a refresh of any webpage that is using the API.
+If a plumber endpoint returns an HTML response, when hotwater
+refreshes the API, {hotwater} will also order a refresh of any
+webpage that is using the API.
 
 
 
@@ -24,25 +26,51 @@ a refresh of any webpage that is using the API.
 <table>
 <tr><td style = "white-space: nowrap; font-family: monospace; vertical-align: top"><code id="path">path</code></td>
 <td>
-path to plumber file
+path to plumber API file.
 </td></tr>
 <tr><td style = "white-space: nowrap; font-family: monospace; vertical-align: top"><code id="dirs">dirs</code></td>
 <td>
-extra directories to watch
+(optional) a character vector of extra directories
+to watch for file changes. Paths are resolved from the current working
+directory, not the directory of the plumber API file.
 </td></tr>
 <tr><td style = "white-space: nowrap; font-family: monospace; vertical-align: top"><code id="port">port</code></td>
 <td>
-port to launch API on, defaults to <code>httpuv::randomPort()</code>
+[default <code>httpuv::randomPort()</code>] port to launch API on.
+
+port can either be set explicitly, or it defaults to the
+<code>plumber.port</code> option. If the plumber option is undefined, the fallback
+value of <code>httpuv::randomPort()</code> is used.
 </td></tr>
 <tr><td style = "white-space: nowrap; font-family: monospace; vertical-align: top"><code id="host">host</code></td>
 <td>
-host to launch API on, defaults to &quot;127.0.0.1&quot;
+[default &quot;127.0.0.1&quot;] host to launch API on.
+
+host can either be set explicitly, or it defaults to the
+<code>plumber.host</code> option. If the plumber option is undefined, the fallback
+value of &quot;127.0.0.1&quot; is used.
 </td></tr>
 <tr><td style = "white-space: nowrap; font-family: monospace; vertical-align: top"><code id="ignore">ignore</code></td>
 <td>
-vector of files or file extensions to ignore (globs)
+[default <code>c("*.sqlite", "*.git*")</code>] vector of file globs
+to ignore.
 </td></tr>
 </table>
+
+
+### Details
+
+To refresh the browser, a postserialize plumber::pr_hook is used to
+inject a websocket into the HTML client that listens for the
+plumber server refresh.
+
+
+
+### See Also
+
+plumber::options_plumber,
+plumber::get_option_or_env, plumber::serializer_html
+
 
 
 ### Examples
@@ -50,7 +78,11 @@ vector of files or file extensions to ignore (globs)
 library(hotwater)
 
 if (interactive()) {
- hotwater::run(system.file("examples", "plumber.R", package = "hotwater"))
+ # start a hotwater session on port 9999
+ hotwater::run(
+   path = system.file("examples", "plumber.R", package = "hotwater"),
+   port = 9999L
+ )
 }
 
 
